--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -1,11 +1,61 @@
 {% extends 'layout.html'%}
 {% load static %}
 {% block content %}
-<h3 class="fw-bold fst-italic text-center">Portfolio</h3>
-<div class="container p-5">
-    <img src="{% static 'img/light.jpg' %}" width="480px" height="600px" style="border-radius:20px ;"/>
-    
-</div>
+
+<header class="row m-auto">
+
+    <h3 class="fw-bold fst-italic text-center">Portfolio</h3>
+    <div class="col-md-4 m-auto">
+        <img src="{% static 'img/light.jpg' %}" width="480px" height="600px" style="border-radius:20px ;"/>
+    </div>
+
+    <div class="col-md-6 m-auto mt-5">
+        <h1 class="">Fernando Baeza</h1>
+        <h3 class="">Desarrollador Web</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis tempora perspiciatis molestias iusto ducimus
+          soluta mollitia ratione, fuga praesentium, reiciendis minima! Facere, veniam! Omnis, quod molestias quo fugit enim
+          vero vitae, cumque tenetur at, impedit provident dicta laudantium quia facilis consequuntur blanditiis iste
+          laborum voluptatibus libero doloribus? Pariatur voluptatem obcaecati deserunt aperiam exercitationem nam voluptas
+          rerum reprehenderit minima, earum impedit saepe eos ducimus fugit itaque a nulla omnis architecto laudantium
+          blanditiis? Eius ipsum quidem enim architecto fugiat porro inventore libero praesentium aperiam nulla
+          exercitationem nemo soluta, culpa impedit est et doloribus ut necessitatibus odit, dicta voluptate! Vero ab nulla
+          placeat.</p>
+  
+        <a href="{% static 'docs/cv.pdf' %}" class="btn btn-primary btn-lg rounded3" target="_blank">Descargar CV</a>
+    </div>
+</header>
+
+
+
+
+  <!-- Porfolio Section -->
+  <div class="row my-4 text-center mt-5">
+
+    <h3 class="mt-5">My Projects</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, aperiam?</p>
+  
+    {% for project in projects %}
+    <div class="col-md-4 p-4">
+      <div class="card bg-black card-project">
+        <img src="{{project.image.url }}" class="card-img-top" />
+  
+        <div class="card-body">
+  
+          <h2>{{ project.title }}</h2>
+          <p>{{ project.description }}</p>
+  
+          {% if project.url %}
+          <a href="{{project.url}}" class="btn btn-light rounded-0 btn-sm" target="__blank" rel="noreferrer">Visit the
+            Project</a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
+
+
 
 
 {% endblock %}
