--- a/portfolio/static/main.css
+++ b/portfolio/static/main.css
@@ -9,3 +9,10 @@ body{
     width: 300px;
     height: 280px;
 }
+.bg-black{
+    background-color: #444;
+}
+.link{
+    text-decoration: none;
+    color: #444;
+}
