--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -1,15 +1,20 @@
 {% extends 'layout.html' %}
 {% block content %}
 
+<div class="row my-4">
 
-{% for post in posts%}
-<p>{{post.id}}</p>
-<p>{{post.title}}</p>
-<p>{{post.date|date:'d M Y  '}}</p>
-<p>{{post.body | truncatechars:150| striptags}}</p>
-<a href="{% url 'blog:post_detail' post.id %}">
-    <img alt="{{ post.title}}" src="{{ post.image.url }}" width="400px" height="250px"/>
-</a>
-
-{% endfor %}
+    {% for post in posts%}
+    <div class="col-md-4 p-4">
+        <a class="link" href="{% url 'blog:post_detail' post.id %}"><h2>{{post.title|truncatechars:23}}</h2></a>
+        <h5 class="mt-5">{{post.date|date:'d M Y  '}}</h5>
+        <p>{{post.body | truncatechars:150| striptags}}</p>
+        <a href="{% url 'blog:post_detail' post.id %}">
+            <img alt="{{ post.title}}" src="{{ post.image.url }}" width="400px" height="250px"/>
+        </a>
+    </div>
+    
+    
+    
+    {% endfor %}
+</div>
 {% endblock %}
