--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,12 +1,19 @@
 {% extends 'layout.html' %}
 {% block content %}
 
+<div class="text-center">
+    <a href="{% url 'blog:posts' %}" class="btn btn-secondary btn-lg mb-5 rounded3">Volver</a>
 
-<p>{{post.id}}</p>
-<p>{{post.title}}</p>
-<p>{{post.date}}</p>
-<p>{{post.body|safe}}</p>
-<img alt="{{ post.title}}" src="{{ post.image.url }}" width="400px" height="250px"/>
+    <h1>{{post.title}}</h1>
+
+</div>
+
+<h4>{{post.date|date:'jS F Y'}}</h4>
+<p class="mt-5">{{post.body|safe}}</p>
+<div class="container mt-5">
+    <img class="m-auto" alt="{{ post.title}}" src="{{ post.image.url }}" width="1250px" height="750px"/>
+
+</div>
 
 
 {% endblock %}
